[package]
name = "skribo"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "text", "formatting", "layout"]
repository = "https://github.com/linebender/skribo"
description = "A Rust library for low-level text layout."
readme = "README.md"
categories = ["graphics", "text-processing"]

[dependencies]
harfbuzz = { git = "https://github.com/servo/rust-harfbuzz.git" }
harfbuzz-sys = { git = "https://github.com/servo/rust-harfbuzz.git" }
font-kit = { version = "0.6"} #, features = ["loader-freetype-default"] }
pathfinder_geometry = "0.5"
unicode-normalization = "0.1.8"
log = "0.4"
